--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./styles/output.css" />
 
+  <meta property="og:type" content="website"/>
+  <meta property="og:title" content="Dev Burguer - A melhor hamburgueria dev!"/>
+  <meta property="og:image" content="https://hamburgueria-umber-delta.vercel.app/assets/hamb-1.png"/>
+  <meta property="og:description" content="O melhor hamburguer gourmet caseiro da região!"/>
+  <meta property="og:site_name" content="DevBurguer"/>
+
   <title>Dev Burguer - A melhor hamburgueria dev!</title>
 </head>
 
